--- a/Alexander_etal_OpEd_Reanalaysis.tex
+++ b/Alexander_etal_OpEd_Reanalaysis.tex
@@ -1,33 +1,69 @@
-\documentclass[12pt]{article}
-\usepackage{color,soul}
-\usepackage[colorlinks = True,
-            linkcolor = black,
-            urlcolor  = black,
-            citecolor = black,
-            anchorcolor = black]{hyperref}
+% \documentclass[12pt]{article}
+% \usepackage{color,soul}
+% \usepackage[colorlinks = True,
+%             linkcolor = black,
+%             urlcolor  = black,
+%             citecolor = black,
+%             anchorcolor = black]{hyperref}
+%
+% \usepackage[version=4]{mhchem}
+% \usepackage{graphicx}
+% \usepackage{array} % for better arrays (eg matrices) in maths
+% \usepackage[T1]{fontenc}
+% \usepackage[utf8]{inputenc}
+% \usepackage{mathptmx}
+% \usepackage{cleveref}
+% \usepackage{outlines}
+% \linespread{1.25}
+% \usepackage[parfill]{parskip}
+% \usepackage[top=1in, bottom=1in, left=1in, right=1in]{geometry}
+% \geometry{letterpaper}
+%
+% \usepackage[numbers]{natbib}
 
-\usepackage[version=4]{mhchem}
+\documentclass[a4paper,num-refs]{oup-contemporary}
+
+\journal{gigascience}
+
 \usepackage{graphicx}
-\usepackage{array} % for better arrays (eg matrices) in maths
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{mathptmx}
-\usepackage{cleveref}
-\usepackage{outlines}
-\linespread{1.25}
-\usepackage[parfill]{parskip}
-\usepackage[top=1in, bottom=1in, left=1in, right=1in]{geometry}
-\geometry{letterpaper}
+\usepackage{siunitx}
 
-\usepackage[numbers]{natbib}
 
 
 \title{Keeping it light: (Re)analyzing community-wide datasets without major infrastructure}
-\author{Harriet Alexander, Lisa K. Johnson, C. Titus Brown}
+
+\author[1]{Harriet Alexander}
+\author[1]{Lisa K. Johnson}
+\author[1,\authfn{1}]{C. Titus Brown}
+
+\affil[1]{Population Health and Reproduction, University of California, Davis, CA, USA}
+
+%%% Author Notes
+\authnote{\authfn{1}titus@idyll.org}
+
+
+\papercat{Commentary}
+
+\runningauthor{Alexander et al.}
+
+\jvolume{00}
+\jnumber{0}
+\jyear{2017}
+
 
 \begin{document}
-  \maketitle
 
+\begin{frontmatter}
+\maketitle
+
+  \begin{abstract}
+Abstract text goes here.
+  \end{abstract}
+
+\begin{keywords}
+Reproducibility; Transcriptome Assembly;
+\end{keywords}
+\end{frontmatter}
 
 \section{Background}
 Advances in high-throughput, next-generation sequencing technologies have catapulted biology into a new computational era. In fields of biology that leverage sequencing data, the primary limiting step in the earlier stages of biological inquiry has increasingly shifted away from data generation to data analysis. Concomitant with the increasing emphasis on the computational processing of these data is the advancement of the computational tools available for such analyses: new computational approaches for the analysis of these data are constantly being created, tested, and proved worthy of use. Yet, outside of computational lab groups, the practice of reanalysis of previously generated data with new tools and approaches is not commonplace. Such reanalysis has great utility and will become more routine within the life sciences, yet reanalysis necessitates a new set of considerations for best practices and resource development.
@@ -60,30 +96,16 @@ by small research groups.
 
 % @CTB how publish
 
-% \subsection{Major questions}
-% \begin{enumerate}
-%   \item Where do you store the raw data?
-%   \item Where do you store reanalyzed data? How can you distinguish from the original analysis?
-%   \item How do you document provenance?
-%   \item Where can you run large, high memory compute operations?
-%   \item How to maximize utility to entire gradient of computational abilities?
-% \end{enumerate}
 \section{Main text}
 \subsection{Storage of secondary data products}
 Funding agencies and academic journals now mandate the deposition of raw data into digital repositories (e.g. NCBI Sequence Read Archive (SRA) and Gene Expression Omnibus, European Nucleotide Archive). Thus, to date, the majority of the sequence data that has been generated and published are openly available online for reference and use in other studies. The sharing and availability of raw data from high-throughput sequencing studies has been largely managed through the development of archival services such as the SRA, which was established as part of the International Nucleotide Sequence Database Collaboration (INSDC)\cite{Kodama2012, Shumway2009}. The SRA currently contains more than 1.8e16 bases of information (\textasciitilde7e15 are open access)\footnote{As of 17 May 2018.}. While a tremendous resource for biological inquiry, a major problem remains in that raw sequencing data is not the most directly useful form of sequencing data. Rather, biologists rely heavily upon the computationally generated secondary products of sequencing reads (e.g. assembled transcriptomes or genomes, annotations, associated count-based data, etc.). There is a dearth of these secondary products in central, publicly accessible databases, such as the  Transcriptome Shotgun Assembly (TSA) Sequence Database.
-%\footnote{All of the assemblies done by NCGR for MMETSP are absent from the TSA (unless I am not seeing them for some reason, potentially double check \href{https://www.ncbi.nlm.nih.gov/bioproject/248394}{here} and \href{https://www.ncbi.nlm.nih.gov/bioproject/231566}{here}). I would say that it appears that only two transcriptomes were uploaded to the TSA (probably because it is a bit of a PITA to get through their QC system). And thus, iMicrobe. I am not sure how the discussion of this should go but I do think that it proves our point quite nicely.}\footnote{The storage of microbial genomes might be an exception to this rule. NCBI's Microbial Genome Resources and JGI's IMG/M seem to be well adopted by their community.}\footnote{Perhaps a visual comparison of \# of datasets between the SRA and the TSA would be good?}
+
 In fact, a substantial proportion of these data products might be aptly categorized as `dark data,' as they are largely undiscoverable and often archived independently in association with a publication or on private servers. Even more limiting, however, is that the guidelines for public databases such as the TSA specifically state that ``Assemblies from sequences not directly sequenced by the submitter'' should not be uploaded to the TSA, thereby excluding the potential for reassembled datasets to be made available and directly linked to preexisting BioProjects, BioSamples, TSAs, and SRA entries.\footnote{@CTB do we have a citation/link for this policy?}
 
 From the perspective of our MMETSP reanalysis, we argue the community needs more than a place to put the primary and secondary data products associated with a single publication. Ideally, the results of each reanalysis would be deposited in a discoverable location, but would have a coherent archival procedure that is lab-independent, easily searchable, and ``forward discoverable'' (i.e. when a  new version of a data product is released, old versions can point to the new version). Moreover, such an archival platform would ideally document the full provenance of the secondary data product. Movement towards this kind of data archival system are being made both with the development of alternative scientific data publication models (e.g. the Research Object\cite{Bechhofer2013}) as well as integration of metadata models (such as the Resource Description Framework) onto existing scientific databases like the European Bioinformatics Institute (EBI) \cite{Callahan2013}, but policies surrounding secondary data products will need to change.
 
 \subsection{Directly linking secondary data products to provenance of work-flow}
 
-\begin{figure}[h!]
-  \centering
-  \includegraphics[width=12cm]{Diagram.pdf}
-  \caption{Flow of coupled script and data product evolution.}
-  \label{FlowDiagram}
-\end{figure}
 
 In the absence of a community database specifically for the type of
 secondary product that was produced in this analysis, we opted to
@@ -91,7 +113,7 @@ upload the assemblies, annotations, and counts to Zenodo
 (https://zenodo.org), a scientific data repository founded by CERN,
 which provided DOIs for the assemblies.  We then created a GitHub
 repository containing the scripts used to generate the assemblies, and
-added the output data DOIs (\Cref{FlowDiagram}).  The entirety of the
+added the output data DOIs (\ref{fig:FlowDiagram}).  The entirety of the
 repository was then archived with Zenodo, which generated a single DOI
 for the project.
 
@@ -108,6 +130,12 @@ such an approach might be further complemented by the integration of a
 JSON Linked Data file detailing the metadata for the assembly product,
 such as the pipeline used and previous versions of the assemblies.
 
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{Diagram.pdf}
+  \caption{Flow of coupled script and data product evolution.}
+  \label{fig:FlowDiagram}
+\end{figure}
 \section{Conclusion}
 
 The Github-Zenodo framework presented here represents a relatively low
@@ -155,8 +183,5 @@ full advantage of public data sets.
 %\footnote{Random musings that I don't think are directly germane to this topic: This issues surrounding discoverability really bringing us back to whether or not centralized or decentralized databases are of greater utility to the general public. Potentially hash-type approaches might better facilitate the automatic identification of new datasets (e.g. Sourmash). For example if you are working on a dataset you could automatically query all existing datasets to see if any sort of new data has been released on the issue. This is potentially made more difficult if we do not have a unified resource such as the SRA. The obvious benefit of a centralized repository is that it provides the user with a smaller and easily identifiable search set. But perhaps if we switch all data to the IPFS you could specify a file structure in which you would like to search and then search it. It is hard to say exactly how this would be implemented. And for that… we have Luiz.}
 
 
-
-\newpage
-\bibliographystyle{bmc_article}
 \bibliography{Oped_Reanalysis}
 \end{document}
