updated bib with macmanes

--- a/Oped_Reanalysis.bib
+++ b/Oped_Reanalysis.bib
@@ -171,3 +171,14 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/21572440},
 volume = {29},
 year = {2011}
 }
+@article {MacManes177253,
+	author = {MacManes, Matthew D},
+	title = {The Oyster River Protocol: A Multi Assembler and Kmer Approach For de novo Transcriptome Assembly},
+	year = {2017},
+	doi = {10.1101/177253},
+	publisher = {Cold Spring Harbor Laboratory},
+	abstract = {Characterizing transcriptomes in non-model organisms has resulted in a massive increase in our understanding of biological phenomena. This boon, largely made possible via high-throughput sequencing, means that studies of functional, evolutionary and population genomics are now being done by hundreds or even thousands of labs around the world. For many, these studies begin with a de novo transcriptome assembly, which is a technically complicated process involving several discrete steps. The Oyster River Protocol (ORP), described here, implements a standardized and benchmarked set of bioinformatic processes, resulting in an assembly with enhanced qualities over other standard assembly methods. Specifically, ORP produced assemblies have higher TransRate scores and mapping rates, which is largely a product of the fact that it leverages a multi-assembler and kmer assembly process, thereby bypassing the shortcomings of any one approach. These improvements are important, as previously unassembled transcripts are included in ORP assemblies, resulting in a significant enhancement of the power of downstream analysis. Further, as part of this study, we show that assembly quality is unrelated to taxonomy, nor is it related to the number of reads generated, above 30 million reads. Code Availability: The version controlled open-source code is available at https://github.com/macmanes-lab/Oyster_River_Protocol. Instructions for software installation and use, and other details are available at http://oyster-river-protocol.rtfd.org/.},
+	URL = {https://www.biorxiv.org/content/early/2017/08/16/177253},
+	eprint = {https://www.biorxiv.org/content/early/2017/08/16/177253.full.pdf},
+	journal = {bioRxiv}
+}
