--- a/Alexander_etal_OpEd_Reanalaysis.tex
+++ b/Alexander_etal_OpEd_Reanalaysis.tex
@@ -57,7 +57,9 @@
 \maketitle
 
   \begin{abstract}
-Abstract text goes here.
+The introduction of HT sequencing to biology has changed how we conduct science
+
+The rise of high-throughput sequencing technologies in biological inquiry has drastically altered the
   \end{abstract}
 
 \begin{keywords}
