--- a/Alexander_etal_OpEd_Reanalaysis.tex
+++ b/Alexander_etal_OpEd_Reanalaysis.tex
@@ -62,7 +62,7 @@
   \end{abstract}
 
 \begin{keywords}
-Reproducibility; Transcriptome Assembly;
+reproducibility; data reuse; open data;
 \end{keywords}
 \end{frontmatter}
 
