--- a/Alexander_etal_OpEd_Reanalaysis.tex
+++ b/Alexander_etal_OpEd_Reanalaysis.tex
@@ -109,12 +109,8 @@ In the absence of a community database specifically for the type of
 secondary product that was produced in this analysis, we opted to
 upload the assemblies, annotations, and counts to Zenodo
 (https://zenodo.org), a scientific data repository founded by CERN,
-which provided DOIs for the assemblies (https://doi.org/10.5281/zenodo.746048).
-We then created a GitHub
-repository containing the scripts used to generate the assemblies, and
-added the output data DOIs (\ref{fig:FlowDiagram}).  The entirety of the
-repository was then archived with Zenodo, which generated a single DOI
-for the project (https://doi.org/10.5281/zenodo.249982).
+which provided a DOI for the assemblies (https://doi.org/10.5281/zenodo.746048). The header information for each assembly was modified to contain this DOI. We then created a GitHub
+repository containing the scripts used to generate the assemblies (\ref{fig:FlowDiagram}) .  The repository was then archived with Zenodo, which generated a single DOI for the project (https://doi.org/10.5281/zenodo.249982).
 
 As such, the scripts used in the generation of transcriptomes are
 directly linked through a unique DOI to the data products that are
@@ -138,9 +134,8 @@ such as the pipeline used and previous versions of the assemblies.\footnote{It s
 \section{Conclusion}
 
 The Github-Zenodo framework presented here represents a relatively low
-cost, undemanding way for small research groups (i.e. a graduate
-student) to perform large-scale re-analysis projects in an efficient
-and publicly accessible way. The direct linking of protocols and
+cost way for small research groups (i.e. a graduate
+student) to perform large-scale re-analysis projects in a publicly accessible way. The direct linking of protocols and
 metadata to output data products is paramount in the data heavy future
 of scientific advancement. We also identified several lingering issues surrounding large scale
 re-analysis.
