final updates for submission

--- a/Alexander_etal_OpEd_Reanalaysis.tex
+++ b/Alexander_etal_OpEd_Reanalaysis.tex
@@ -110,8 +110,15 @@ In the absence of a community database specifically for the type of
 secondary product that was produced in this analysis, we opted to
 upload the assemblies, annotations, and counts to Zenodo
 (https://zenodo.org), a scientific data repository founded by CERN,
-which provided a DOI for the assemblies (https://doi.org/10.5281/zenodo.740440). The header information for each assembly was modified to contain the DOI. We then created a GitHub
-repository containing the scripts used to generate the assemblies (\ref{fig:FlowDiagram}) .  The repository was then archived with Zenodo, which generated a single DOI for the project (https://doi.org/10.5281/zenodo.594854).
+which provided a DOI for the assemblies (\href{https://doi.org/10.5281/zenodo.740440}{https://doi.org/10.5281/zenodo.740440}).
+The header information for each assembly was modified to contain the DOI. We then created a GitHub
+repository containing the scripts used to generate the assemblies (\ref{fig:FlowDiagram}).
+The repository was then archived with Zenodo,
+which generated a single DOI for the project
+(\href{https://doi.org/10.5281/zenodo.594854}{https://doi.org/10.5281/zenodo.594854}).\footnote{Individual components of the project are assigned specific DOIs, for example: translated peptide files: \href{https://doi.org/10.5281/zenodo.745633}{https://doi.org/10.5281/zenodo.745633};
+gff3 annotation files: \href{https://doi.org/10.5281/zenodo.744702}{https://doi.org/10.5281/zenodo.744702};
+annotation tables: \href{https://doi.org/10.5281/zenodo.775129}{https://doi.org/10.5281/zenodo.775129};
+quantification files: \href{https://doi.org/10.5281/zenodo.746294}{https://doi.org/10.5281/zenodo.746294}.}
 
 As such, the scripts used in the generation of transcriptomes are
 directly linked through a unique DOI to the data products that are
