submission to gigascience

--- a/Alexander_etal_OpEd_Reanalaysis.tex
+++ b/Alexander_etal_OpEd_Reanalaysis.tex
@@ -80,7 +80,7 @@ Since the original MMETSP analysis, new tools and techniques for the assembly of
 
 These secondary data products of sequencing, such as annotated
 assemblies, should be viewed as hypotheses generated from the
-underlying biology, rather than some immutable `truth'. As such these
+underlying biology, rather than some immutable ``truth''. As such these
 secondary data products can continue to be improved as new tools are
 developed.  For example, we note that \citet{MacManes177253} described several
 limitations and challenges of current assembly technology and developed
@@ -109,7 +109,7 @@ From the perspective of our MMETSP re-analysis, we argue the community needs mor
 In the absence of a community database specifically for the type of
 secondary product that was produced in this analysis, we opted to
 upload the assemblies, annotations, and counts to Zenodo
-(https://zenodo.org), a scientific data repository founded by CERN,
+(\href{https://zenodo.org}{https://zenodo.org}), a scientific data repository founded by CERN,
 which provided a DOI for the assemblies (\href{https://doi.org/10.5281/zenodo.740440}{https://doi.org/10.5281/zenodo.740440}).
 The header information for each assembly was modified to contain the DOI. We then created a GitHub
 repository containing the scripts used to generate the assemblies (\ref{fig:FlowDiagram}).
