--- a/Alexander_etal_OpEd_Reanalaysis.tex
+++ b/Alexander_etal_OpEd_Reanalaysis.tex
@@ -179,8 +179,13 @@ actively working on is updated or changes. This presents many social
 and technical challenges that will need to be solved if we are to take
 full advantage of public datasets.
 
-% ne can imagine several ways that this might happen, such as Zenodo or Open Science Framework (OSF) adding utility to provide users the option of following a DOI chain that will automatically notify the user if any alterations or updates occur (e.g. a new DOI is provided for a repository). Another, less user-dependent method might involve the use of JSON-LD files to automatically track the occurrence of the original raw data DOI in the wild.
-%\footnote{Random musings that I don't think are directly germane to this topic: This issues surrounding discoverability really bringing us back to whether or not centralized or decentralized databases are of greater utility to the general public. Potentially hash-type approaches might better facilitate the automatic identification of new datasets (e.g. Sourmash). For example if you are working on a dataset you could automatically query all existing datasets to see if any sort of new data has been released on the issue. This is potentially made more difficult if we do not have a unified resource such as the SRA. The obvious benefit of a centralized repository is that it provides the user with a smaller and easily identifiable search set. But perhaps if we switch all data to the IPFS you could specify a file structure in which you would like to search and then search it. It is hard to say exactly how this would be implemented. And for that… we have Luiz.}
+\section{Declarations}
+\section{Competing interests}
+The authors declare that they have no competing interests.
+\section{Funding}
+Funding was provided from the Gordon and Betty Moore Foundation under award number GBMF4551 to C.T.B.
+\section{Author contribution}
+Conceptualized by H.A., L.K.J., and C.T.B. Written by H.A. and C.T.B. Edited and revised by H.A., C.T.B., and L.K.J. All authors read and approved the final manuscript.
 
 
 \bibliography{Oped_Reanalysis}
