updated text to fix affiliation

--- a/Alexander_etal_OpEd_Reanalaysis.tex
+++ b/Alexander_etal_OpEd_Reanalaysis.tex
@@ -36,11 +36,11 @@
 
 \author[1]{Harriet Alexander}
 \author[1,2]{Lisa K. Johnson}
-\author[1,\authfn{1}]{C. Titus Brown}
+\author[1,2,3\authfn{1}]{C. Titus Brown}
 
 \affil[1]{Population Health and Reproduction, University of California, Davis, CA, USA}
 \affil[2]{Molecular, Cellular, and Integrative Physiology Graduate Group, University of California, Davis, CA, USA}
-
+\affil[3]{Genome Center, University of California Davis, CA, USA}
 %%% Author Notes
 \authnote{\authfn{1}ctbrown@ucdavis.edu}
 
