--- a/Oped_Reanalysis.bib
+++ b/Oped_Reanalysis.bib
@@ -18,16 +18,16 @@ volume = {9},
 year = {1999}
 }
 
+
 @article {Johnson2018,
 	author = {Johnson, Lisa Kristine and Alexander, Harriet and Brown, C. Titus},
 	title = {Re-assembly, quality evaluation, and annotation of 678 microbial eukaryotic reference transcriptomes},
-	year = {2018},
-	doi = {10.1101/323576},
-	publisher = {Cold Spring Harbor Laboratory},
-	abstract = {Background: De novo transcriptome assemblies are required prior to analyzing RNAseq data from a species without an existing reference genome or transcriptome. Despite the prevalence of transcriptomic studies, the effects of using different workflows, or {\textquoteright}pipelines{\textquoteright}, on the resulting assemblies are poorly understood. Here, a pipeline was programmatically automated and used to assemble and annotate raw transcriptomic short read data collected by the Marine Microbial Eukaryotic Transcriptome Sequencing Project (MMETSP). Transcriptome assemblies generated through this pipeline were evaluated and compared against assemblies that were previously generated with a pipeline developed by the National Center for Genome Research (NCGR). Findings: New transcriptome assemblies contained 70\% of the previous contigs as well as new content. On average, 7.8\% of the annotated contigs in the new assemblies were novel gene names not found in the previous assemblies. Taxonomic trends were observed in the assembly metrics, with assemblies from the Dinoflagellata and Ciliophora phyla showing a higher percentage of open reading frames and number of contigs than transcriptomes from other phyla. Conclusions: Given current bioinformatics approaches, there is no single {\textquoteright}best{\textquoteright} reference transcriptome for a particular set of raw data. As the optimum transcriptome is a moving target, improving (or not) with new tools and approaches, automated and programmable pipelines are invaluable for managing the computationally-intensive tasks required for re-processing large sets of samples with revised pipelines. Moreover, automated and programmable pipelines facilitate the comparison of diverse sets of data by ensuring a common evaluation workflow was applied to all samples. Thus, re-assembling existing data with new tools using automated and programmable pipelines may yield more accurate identification of taxon-specific trends across samples in addition to novel and useful products for the community.},
-	URL = {https://www.biorxiv.org/content/early/2018/05/17/323576},
-	eprint = {https://www.biorxiv.org/content/early/2018/05/17/323576.full.pdf},
-	journal = {bioRxiv}
+	year = {in press},
+	doi = {},
+	publisher = {},
+	abstract = {},
+	URL = {},
+	journal = {GigaScience}
 }
 
 @article{Shumway2009,
